Version 2.0  2010-07-10
 * tracker network io use libevent instead of traditional io model
 * storage network and disk io use libevent instead of traditional io model
 * tracker_mem.c malloc single group and storage struct, remove referer
 * make install copy config files
 * tracker.conf add two parameters: storage_sync_file_max_delay and 
   storage_sync_file_max_time

Version 1.29  2010-06-30
 * add files: tracker_dump.h and tracker_dump.c, tracker dump global vars
 * add files: storage_dump.h and storage_dump.c, storage dump global vars
 * sockopt.c: tcprecvfile and tcpdiscard add parameter total_recv_bytes
 * storage server add fields: storage_port and storage_http_port
 * auto rename synced remark files when the port of all storage servers 
   in a group changed to another port
 * connect server support timeout, adding connect_timeout parameter in 
   config file
 * log_init set log to cache to false (no cache)

Version 1.28  2010-05-30
 * tracker_servive.c: set current_write_group anyway when current group
   out of space
 * logger support context (multi instance)
 * get storage servers by filename: if the file created one day ago (the create 
   timestamp of the file < current_time - 86400), any active storage server matches
 * add files: common/pthread_func.h and common/pthread_func.c
 * common/sched_thread.h, remove statement: extern bool g_continue_flag;
 * client add libfastcommon
 * global variables: g_base_path, g_network_timeout, g_version change to 
   g_fdfs_base_path, g_fdfs_network_timeout, g_fdfs_version
 * common/fdfs_base64.h/c change name to common/base64.h/c
 * make.sh use TARGET_PREFIX instead of TARGET_PATH
 * protocol add ACTIVE_TEST, tracker and storage both support
 * php client, bug fixed: fastdfs_connect_server, the sock must init to -1
 * bug fixed: storage status not correct with multi tracker servers
 * sync storage mark file and stat file to disk properly

Version 1.27  2010-04-10